# AIBF_API

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  NOTICE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: admin.py  aibf.py  ats.py  model_training.py  resumes.py
app/services/: ats_engine.py  bias_engine.py  features.py  pipeline_demo.py  seed_data.py
docs/: 00-overview.md  01-methodology.md  02-architecture.md  03-api.md
docs/diagrams/: pipeline.mmd  sequence.mmd
openapi/: aibf.yaml
tests/: conftest.py  test_aibf.py  test_ats.py  test_feedback.py  test_resumes.py  test_retrain.py
