[project]
name = "aibf"
version = "1.0.0"
description = "AI Bias Firewall (AIBF): real-time, explainable bias detection for ATS recruitment decisions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Jay Barach", email = "jbarach2012@users.noreply.github.com" }]
keywords = ["ats", "hr-tech", "bias", "fairness", "recruiting", "explainability", "shap", "aibf"]

[project.urls]
Homepage = "https://github.com/jbarach2012/AIBF_API"
Documentation = "https://github.com/jbarach2012/AIBF_API/tree/main/docs"
Repository = "https://github.com/jbarach2012/AIBF_API"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
